<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.HomeFragment">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <RelativeLayout
                android:id="@+id/filter_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clipChildren="false"
                android:clipToPadding="false"
                android:layout_marginBottom="16dp"
                android:padding="10dp">

                <TextView
                    android:id="@+id/filtertxt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="15dp"
                    android:fontFamily="sans-serif-medium"
                    android:text="@string/filters"
                    android:textColor="@color/colorPrimary"
                    android:textSize="18sp" />


                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/beer_name"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/filtertxt">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableStart="@drawable/ic_search"
                        android:drawablePadding="5dp"
                        android:hint="@string/search_hint" />


                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/search_btn"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:layout_below="@id/beer_name"
                    android:layout_marginTop="8dp"
                    android:text="@string/search"
                    android:backgroundTint="@color/colorPrimary"
                    android:textColor="@android:color/white"
                    style="@style/Widget.MaterialComponents.Button.TextButton"/>

            </RelativeLayout>

            <TextView
                android:id="@+id/beer_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:layout_marginStart="15dp"
                android:fontFamily="sans-serif-medium"
                android:text="@string/beers"
                android:textColor="@color/colorPrimary"
                android:textSize="18sp" />


            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/beerList"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:listitem="@layout/beer_item" />

            <LinearLayout
                android:id="@+id/loading_overlay"
                android:visibility="gone"
                android:orientation="vertical"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ProgressBar
                    android:layout_marginTop="100dp"
                    android:layout_width="62dp"
                    android:layout_height="62dp"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/error_overlay"
                android:visibility="gone"
                android:orientation="vertical"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/error_message"
                    android:layout_marginTop="100dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="32sp"
                    android:text="@string/no_beers_here"/>

            </LinearLayout>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</RelativeLayout>